manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "82022583-ingress"
spec:
  ingressClassName: ingress-internal
  rules:
  #- host: cloud-sample.cepg-aa.kubepia.net
  - host: "sampleapp1-82022583.cepg-aa.kubepia.net"
    http:
      paths:
      - path: /
        backend:
          service:
            name: my-82022583
            port:
              number: 8080
        pathType: Prefix
